2008-12-11  Dave Brolley  <brolley@redhat.com>

	PR7087
	* stap-client: Don't use -d on netcat. Redirect from /dev/null instead.
	* stap-server: Likewise.
	* stap-serverd: Likewise.

2008-12-09  Frank Ch. Eigler  <fche@elastic.org>

	PR6961
	* tapsets.cxx (common_probe_entryfn_prologue): Add new "fakeregs"
	param.  Set context regs_buffer with plausible dummy values if needed.
	Update callers.
	(mark_builder::build): Add kernel to unwindsyms_modules.
	* translate.cxx (emit_common_header): Add pt_regs regs_buffer field
	to context.

2008-12-09  Dave Brolley  <brolley@redhat.com>

	PR7087
	* stap-client: Use netcat or nc, whichever is available.
	* stap-server: Likewise.
	* stap-serverd: Likewise.

2008-12-08  David Smith  <dsmith@redhat.com>

	RHBZ 474390
	* tapsets.cxx (dwflpp::cu_function_caching_callback): Handles NULL
	return from dwarf_diename().
	(dwflpp::print_locals): Ditto.
	(dwflpp::find_variable_and_frame_base): Ditto.
	(dwflpp::literal_stmt_for_return): Ditto.
	(dwarf_builder::build): Ditto.

2008-12-08  Frank Ch. Eigler  <fche@elastic.org>

	PR7062
	* buildrun.cxx (uprobes_home): Make local, based on
	session.runtime_path.

2008-12-05  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx, translate.cxx: Set default elfutils debuginfo_path
	to start with "+", to enable debuginfo<->stripped checksum checking.
	* stap.1.in: Note this.

2008-12-05  Kent Sebastian  <ksebasti@redhat.com>

	PR7051
	* doc/langref.tex, elaborate.cxx, runtime/vsprintf.c,
	stap.1.in, staptree.cxx, staptree.h, translate.cxx:
	Remove printf %n directive and references to it in documentation.

2008-12-03  Roland McGrath  <roland@redhat.com>

	PR6925
	* run-stap.in: New file.
	* configure.ac: Generate run-stap from it.
	* configure: Regenerated.

	PR7063
	* buildrun.cxx (run_pass): Obey SYSTEMTAP_STAPRUN environment variable.

2008-12-03  Frank Ch. Eigler  <fche@elastic.org>

	PR6925
	* configure.ac: Suggest --prefix if configured without.
	* configure: Regenerated.
