@@ -1,14 +1,0 @@
-probe process("static_uprobes.x").mark("label1") 
-{ 
-  printf("In label1 probe\n")
-}
-
-probe process("static_uprobes.x").mark("label2") 
-{ 
-  printf("In label2 probe %#x\n", $arg1)
-}
-
-probe process("static_uprobes.x").mark("label3") 
-{ 
-  printf("In label3 probe %#x %#x\n", $arg1, $arg2)
-}
