@@ -1,3 +1,7 @@
+2008-12-16  Stan Cox  <scox@redhat.com>
+
+	* systemtap.base/static_uprobes.exp: Generate our own probes file.
+
 2008-12-09  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR6961.
